; ModuleID = '/home/carl/AnghaBench/linux/drivers/video/fbdev/omap2/omapfb/dss/extr_hdmi5.c_read_edid.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/video/fbdev/omap2/omapfb/dss/extr_hdmi5.c_read_edid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, %struct.TYPE_3__, i32 }
%struct.TYPE_3__ = type { i32 }

@hdmi = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@HDMI_WP_SYSCONFIG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @read_edid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_edid(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = call i32 @mutex_lock(i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @hdmi, i32 0, i32 0))
  %8 = call i32 (...) @hdmi_runtime_get()
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @BUG_ON(i32 %9)
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @hdmi, i32 0, i32 1, i32 0), align 4
  %12 = load i32, i32* @HDMI_WP_SYSCONFIG, align 4
  %13 = call i32 @REG_GET(i32 %11, i32 %12, i32 3, i32 2)
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @hdmi, i32 0, i32 1, i32 0), align 4
  %15 = load i32, i32* @HDMI_WP_SYSCONFIG, align 4
  %16 = call i32 @REG_FLD_MOD(i32 %14, i32 %15, i32 1, i32 3, i32 2)
  %17 = load i32*, i32** %3, align 8
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @hdmi5_read_edid(i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @hdmi, i32 0, i32 2), i32* %17, i32 %18)
  store i32 %19, i32* %5, align 4
  %20 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @hdmi, i32 0, i32 1, i32 0), align 4
  %21 = load i32, i32* @HDMI_WP_SYSCONFIG, align 4
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @REG_FLD_MOD(i32 %20, i32 %21, i32 %22, i32 3, i32 2)
  %24 = call i32 (...) @hdmi_runtime_put()
  %25 = call i32 @mutex_unlock(i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @hdmi, i32 0, i32 0))
  %26 = load i32, i32* %5, align 4
  ret i32 %26
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @hdmi_runtime_get(...) #1

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @REG_GET(i32, i32, i32, i32) #1

declare dso_local i32 @REG_FLD_MOD(i32, i32, i32, i32, i32) #1

declare dso_local i32 @hdmi5_read_edid(i32*, i32*, i32) #1

declare dso_local i32 @hdmi_runtime_put(...) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
